<resources>
    <string name="app_name">Question Hat</string>
    <string name="username">Username</string>
    <string name="enterusername">Enter your username</string>
    <string name="email">E-mail</string>
    <string name="enteremail">Enter your email</string>
    <string name="phone">Phone</string>
    <string name="enterphone">Enter your phone</string>
    <string name="password">Password</string>
    <string name="enterpassword">Enter your password</string>
    <string name="repassword">Re-Password</string>
    <string name="enterrepassword">Enter your Re-password</string>
    <string name="picture">Picture</string>
    <string name="enterpicture">Press to add Picture</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="createaccount">Create an Account</string>
    <string name="nameperson">Hannan Mohammed</string>
    <string name="coins">Coins</string>
    <!--
    <string name="quizes">Quizzes</string>
    <string name="LeaderBoard">Leaderboard</string>
    <string name="notifaction">Notifications</string>
    <string name="earncoins">Earn Coins</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    -->
    <string name="Choosepath">Choose Path</string>
    <string name="language">Language</string>
    <string name="science">Science</string>
    <string name="drama">Drama</string>
    <string name="art">Art</string>
    <string name="question">Which of the following enzymes convert glucose into glucose p-6 during glycolysis?</string>
    <string name="answer1">FructoKinase</string>
    <string name="answer2">HexoKinase</string>
    <string name="answer3">PEP carboxykinase</string>
    <string name="answer4">Piruvate Carboxylase</string>
    <string name="categoryquestion">Partial biology</string>
    <string name="currentquestion">1</string>
    <string name="slash">/</string>
    <string name="totalquestions">20</string>
    <string name="question_text">Question</string>
</resources>
