<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <ImageView
        android:id="@+id/arrow"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        />

    <ImageView
        android:id="@+id/logo_question_hat"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/logo1"
        tools:ignore="ContentDescription" />

    <!--
    Username
    -->
    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@+id/logo_question_hat"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_18sdp"/>
    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/text_username"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:hint="@string/enterusername"
        android:inputType="textCapWords"
        tools:ignore="Autofill,TextFields"
        />
    <!--
    Email
    -->
    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/username_edit_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_18sdp"/>
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/text_email"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,TextFields"
        />
    <!--
  Phone
    -->
    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@+id/email_edit_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_18sdp"/>
    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/text_phone"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:hint="@string/enterphone"
        android:inputType="phone"
        tools:ignore="Autofill,TextFields"
        />
<!--
Password
-->
    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/phone_edit_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_18sdp"
        />
    <!--
    input type password bay8r font
    -->
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/text_password"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:inputType="textPassword"
        android:hint="@string/enterpassword"
        tools:ignore="Autofill,TextFields" />
    <!--
Re-Password
-->
    <TextView
        android:id="@+id/text_repassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repassword"
        android:layout_below="@+id/password_edit_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_18sdp"
        />
    <!--
    input type password bay8r font
    -->
    <EditText
        android:id="@+id/repassword_edit_text"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/text_repassword"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:inputType="textPassword"
        android:hint="@string/enterrepassword"
        tools:ignore="Autofill,TextFields" />
    <!--
Picture
-->
    <TextView
        android:id="@+id/text_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        android:layout_below="@+id/repassword_edit_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:textSize="@dimen/_18sdp"
        />
    <!--
    input type password bay8r font
    -->
    <EditText
        android:id="@+id/picture_edit_text"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/text_picture"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:inputType="textPassword"
        android:hint="@string/enterpicture"
        tools:ignore="Autofill,TextFields" />
    <ImageView
        android:id="@+id/countinue_image"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/continue_button"
        android:layout_below="@+id/picture_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        tools:ignore="ContentDescription" />

</RelativeLayout>