<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:background="@android:color/white"
    >

    <RelativeLayout
        android:id="@+id/how_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backhround_quiz"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_240sdp"
            android:src="@drawable/background_quiz" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_15sdp"
            android:src="@drawable/ic_arrow_back_white" />

        <TextView
            android:id="@+id/category_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/categoryquestion"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp" />

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_toRightOf="@+id/category_question"
            android:src="@drawable/ic_more_horiz" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_question"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/current_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentquestion"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/current_question"
                android:text="@string/slash"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/total_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/slash"

                android:text="@string/totalquestions"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/questions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_toRightOf="@id/total_question"
                android:text="@string/question_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:padding="@dimen/_24sdp"
            android:text="@string/question"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20sdp" />

        <Button
            android:id="@+id/answer1"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/backhround_quiz"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/button_answer"
            android:text="@string/answer1"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/answer2"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/answer1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_answer"
            android:text="@string/answer2"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/answer3"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/answer2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_answer"
            android:text="@string/answer3"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/answer4"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/answer3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_answer"
            android:text="@string/answer4"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp" />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_below="@+id/answer4"
           android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:cpb_background_progressbar_color="#FBF2F2F2"
            app:cpb_background_progressbar_width="@dimen/_15sdp"
            app:cpb_progress_direction="to_right"
            app:cpb_progress_max="10"
            app:cpb_progressbar_color="#FFA726"
            app:cpb_progressbar_width="@dimen/_15sdp"
            app:cpb_round_border="false" />

        <TextView
            android:id="@+id/count_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_76sdp"
            android:layout_below="@+id/answer4"
            android:text="10"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_16sdp" />


        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentLeft="true"
           android:layout_below="@+id/answer4"
            android:src="@drawable/flag_hint"
            android:layout_marginTop="@dimen/_85sdp"
            android:layout_marginLeft="@dimen/_20sdp"/>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_180sdp"
            android:layout_below="@+id/answer4"
            android:layout_marginTop="@dimen/_85sdp"
            android:layout_toRightOf="@+id/circularProgressBar"
            android:src="@drawable/love_icon" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>